--- a/1st program.html
+++ b/1st program.html
@@ -2,6 +2,11 @@
 <html>
 <head><title>LAB PGM1</title>
     <style>
+        .title1{
+            text-align: center;
+            color: black;
+
+        }
          .title{
              border-radius: 9px;
              margin-bottom: 2px;
@@ -54,8 +59,10 @@
     </script>
 </head>
 
-<body>
+<body style="background-color: rgba(12, 12, 168, 0.438);">
     <div class="container">
+    <div class="title1"> Chaithresh kumar </div>
+    <div class="title1"> 4su17cs012 </div>
     <div class="title"> CALCULATOR </div>
 
 <!--creating table-->
